# 2d-multiplayer-survival-mmorpg

./: .env.example  .gitignore  ENVIRONMENT_SETUP.md  OPENAI_SETUP.md  PROXY_DEPLOYMENT.md  README.md  VOICE_PROXY_README.md  guide.mdc  index.html  package-lock.json  package.json  proxy-package.json  proxy-railway.toml  proxy-server.cjs  railway-client.toml  railway.toml  start-with-proxy.bat  start-with-proxy.sh  tsconfig.app.json  vite.config.ts
.cursor/rules/: change-map-size.mdc  chunking-and-visibility_plan.mdc  client-data-flow.mdc  create-new-plant.mdc  deployables.mdc  guide.mdc  john-carmack.mdc  performance-tips.mdc  resources.mdc  run-server.mdc  spacetimedb-workflow.mdc  syntax.mdc
auth-server/: .env.example  Cargo.toml
auth-server-openauth/: database.ts  index.ts  package-lock.json  package.json
auth-server/src/: jwt.rs  main.rs
client/: MEMORY_GRID_TECH_TREE.md  MUSIC_SYSTEM.md  SOUND_FILES_GUIDE.md
client/src/: App.css  App.tsx
public/: sitemap.xml
scripts/: update-sitemap.js
server/: Cargo.toml  deploy-local-clean.ps1  deploy-local.ps1  deploy-production-clean.ps1  deploy-production.ps1
server/src/: active_effects.rs  active_equipment.rs  animal_collision.rs  armor.rs  auth.rs  barrel.rs  bones.rs  campfire.rs  chat.rs  cloud.rs  collectible_resources.rs  combat.rs  consumables.rs  cooking.rs  corn.rs  crafting.rs  crafting_queue.rs  death_marker.rs  drinking.rs  dropped_item.rs  environment.rs  fishing.rs  furnace.rs  global_tick.rs  grass.rs  harvestable_resource.rs  hemp.rs  inventory_management.rs  items.rs  items_database.rs  lib.rs  (+37 more)
(+227 files in other folders)
