[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum        = { version = "0.7", features = ["json"] }
tokio       = { version = "1.44", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dotenvy     = "0.15"
anyhow      = "1"
jsonwebtoken = "9"
reqwest     = { version = "0.11", features = ["json", "rustls-tls"] }
once_cell   = "1"
chrono      = { version = "0.4", features = ["serde"] }
tower-http  = { version = "0.5", features = ["cors"] }
log         = "0.4"
env_logger  = "0.11"
